# kube-eks-config-rs

./: Cargo.toml  README.md
examples/: getpods-eks.rs  getpods.rs  listclusters.rs
src/: eks.rs  lib.rs
