[package]
name = "kube-eks-config"
version = "0.1.1"
edition = "2024"
description = "Helper for creating kube::Config and kube::Client for EKS cluster"
license = "Apache-2.0"
repository = "https://github.com/imp/kube-eks-config-rs"


[dependencies]
aws-config = { version = "1.8", features = ["behavior-version-latest"] }
aws-sdk-eks = "1.107"
k8s-openapi = { version = "0.26", features = ["latest"] }
kube-client = "2.0"


[dev-dependencies]
kube = "2.0"
tokio = { version = "1.47", features = ["full"] }
