[package]
name = "kube-eks-config"
version = "3.0.0"
edition = "2024"
description = "Helper for creating kube::Config and kube::Client for EKS cluster"
license = "Apache-2.0"
repository = "https://github.com/imp/kube-eks-config-rs"


[dependencies]
aws-config = { version = "1.8", features = ["behavior-version-latest"] }
aws-sdk-eks = "1.127"
k8s-openapi = { version = "0.27", features = ["latest"] }
kube-client = "3.1"


[dev-dependencies]
kube = { version = "3.1", features = [
    "client",
    "rustls-tls",
    "aws-lc-rs",
    # "ring",
] }
tokio = { version = "1.47", features = ["full"] }
